versions/26.1.2/translated/uk_ua/develop/events.md
---
title: Події
description: Посібник того, як використовувати події, надані Fabric API.
authors:
  - Daomephsta
  - dicedpixels
  - Draylar
  - JamiesWhiteShirt
  - Jimmy474
  - Juuxel
  - liach
  - mkpoli
  - natanfudge
  - PhoenixVX
  - SolidBlock-cn
  - YanisBft
authors-nogithub:
  - stormyfabric
---

API Fabric надає систему, яка дозволяє модам реагувати на дії або випадки, які також визначаються як _події_, що відбуваються в грі.

Події — це хуки, які задовольняють звичайні сценарії використання та/або забезпечують покращену сумісність і продуктивність між модами, які використовуються однакові області коду. Використання подій часто замінює використання міксинів.

API Fabric надає події для важливих областей у кодовій базі Minecraft, до яких можуть бути зацікавлені кілька хуків.

Події представлені екземплярами `net.fabricmc.fabric.api.event.Event`, які зберігають і викликають _callbacks_. Часто існує один екземпляр події для зворотного виклику, який зберігається в статичному полі `EVENT` інтерфейсу зворотного виклику, але існують також інші шаблони. Наприклад, `ClientTickEvents` групує кілька пов’язаних подій разом.

## Зворотний виклик {#callbacks}

Зворотний виклик — це фрагмент коду, який передається як аргумент події. Коли подія ініціюється грою, переданий фрагмент коду буде виконано.

### Інтерфейс зворотного виклику {#callback-interfaces}

Кожна подія має відповідний інтерфейс зворотного виклику. Зворотні виклики реєструються шляхом виклику методу `register()` для екземпляра події з екземпляром інтерфейсу зворотного виклику як аргументу.

## Прослуховування подій {#listening-to-events}

У цьому прикладі реєструється `AttackBlockCallback`, щоб завдати шкоди гравцеві, коли він потрапляє в блоки, з яких не випадає предмет під час видобутку вручну.

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/ExampleModEvents.java#attack_block_callback_event

### Додавання предметів до наявних таблиць здобичі {#adding-items-to-existing-loot-tables}

Іноді ви можете додати предмети до таблиць здобичі. Наприклад, додавання вашої здобичі до усталеного блока або сутності.

Найпростіше рішення, заміна файлу таблиці здобичі, може зламати інші моди. А якщо вони захочуть змінити і їх? Ми розглянемо, як можна додавати предмети до таблиць здобичі, не перевизначаючи таблицю.

Ми додамо яйця до таблиці здобичі вугільної руди.

#### Прослуховування завантаження таблиці здобичі {#listening-to-loot-table-loading}

API Fabric має подію, яка запускається під час завантаження таблиць здобичі, `LootTableEvents.MODIFY`. Ви можете зареєструвати зворотний виклик для нього в [ініціалізаторі мода](./getting-started/project-structure#entrypoints). Також перевірмо, чи поточна таблиця здобичі є таблицею вугільної руди:

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/ExampleModEvents.java#loot_table_events

#### Додавання предметів до таблиці здобичі {#adding-items-to-the-loot-table}

Щоб додати предмет, нам потрібно буде додати пул із записом предмета до таблиці здобичі.

Ми можемо створити пул за допомогою `LootPool#lootPool` і додати його до таблиці здобичі.

У нашому пулі ще немає предметів, тому ми зробимо запис про предмет за допомогою `LootItem#lootTableItem` і додамо його до пулу.

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/ExampleModEvents.java#loot_pool_builder{5-7}

## Власні події {#custom-events}

Деякі області гри не мають хуків, наданих Fabric API, тому ви можете використовувати міксин або створити власну подію.

Ми розглянемо створення події, яка запускається, коли вівцю стрижуть. Процес створення події:

- Створення інтерфейсу зворотного виклику події
- Запуск події з міксина
- Створення тестової реалізації

### Створення інтерфейсу зворотного виклику події {#creating-the-event-callback-interface}

Інтерфейс зворотного виклику описує, що має бути реалізоване слухачами подій, які слухатимуть вашу подію. Інтерфейс зворотного виклику також описує, як подія буде викликана з нашого міксина. Традиційно розміщувати об’єкт `Event` як поле в інтерфейсі зворотного виклику, яке ідентифікуватиме нашу фактичну подію.

Для нашої реалізації `Event` ми виберемо використання події на основі масиву. Масив міститиме всі слухачі подій, які прослуховують подію.

Наша реалізація буде викликати слухачі подій по черзі, доки один із них не поверне `InteractionResult.PASS`. Це означає, що слухач може сказати «_скасувати це_», «_затвердити це_» або «_байдуже, передати це наступному слухачу подій_», використовуючи значення, що повертається.

Використання `InteractionResult` як значення, що повертається, є звичайним способом змусити обробники подій співпрацювати таким чином.

Вам потрібно буде створити інтерфейс, який має екземпляр `Event` і метод для реалізації відповіді. Основні налаштування для зворотного виклику стрижки овець:

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/SheepShearCallback.java#sheep_shear_callback

Розгляньмо це глибше. Коли виклик викликається, ми повторюємо всі слухачі:

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/SheepShearCallback.java#listener_iterator

Для кожного слухача ми викликаємо `interact`, щоб отримати відповідь слухача. Ось сигнатура `interact`, яку ми оголосили в цьому інтерфейсі:

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/SheepShearCallback.java#interact_method

Якщо слухач каже, що ми повинні скасувати (повернувши `FAIL`) або повністю завершити (`SUCCESS`), зворотний виклик повертає результат і завершує цикл.

`InteractionResult.PASS` переходить до наступного слухача, доки не будуть викликані всі слухачі й нарешті не буде повернено `PASS`:

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/SheepShearCallback.java#return_value

Ми можемо додати коментарі Javadoc у верхній частині класів зворотного виклику, щоб документувати, що робить кожен `InteractionResult`. У нашому випадку це може бути:

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/SheepShearCallback.java#javadoc_comment

### Запуск події з міксина {#triggering-the-event-from-a-mixin}

Тепер у нас є основна структура подій, але нам потрібно його запустити. Оскільки ми хочемо, щоб подія викликалася, коли гравець намагається підстригти вівцю, ми викликаємо подію `invoker` у `Sheep#mobInteract`, коли викликається `shear()` (тобто вівцю можна стригти, якщо гравець тримає ножиці):

<<< @/reference/26.1.2/src/main/java/com/example/docs/mixin/event/SheepMixin.java#sheep_mixin

### Створення тестової реалізації {#creating-a-test-implementation}

Тепер нам потрібно перевірити нашу подію. Ви можете зареєструвати слухача у своєму методі ініціалізації (або в іншій області, якщо хочете) і додати туди спеціальну логіку.

Ось приклад, коли замість вовни випадає діамант:

<<< @/reference/26.1.2/src/main/java/com/example/docs/event/ExampleModEvents.java#sheep_shear_callback_event

Якщо ви входите в гру і стрижете вівцю, замість вовни повинен випасти діамант.

<!-- TODO: maybe adding a video of a sheep dropping diamonds? -->
